--- a/templates/admin/details_user.html.twig
+++ b/templates/admin/details_user.html.twig
@@ -23,6 +23,7 @@
             </li>
         {% endfor %}
     </ul>
+    <a href="{{ path('list_user')}}">Retour à la liste des utilisateurs</a>
         
         
         
