--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,15 @@
         <title>MoiJV - {% block title %}Dashboard{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
+    <nav> {% block nav %}
+        <ul>
+            <li><a href="{{ path('list_user') }}">Liste des utilisateurs<a> </li>
+            <li><a href="{{ path('list_product') }}">Liste des produits<a> </li>
+            
+        </ul>
+        
+        {% endblock %}</nav>
+    
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
