--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,12 @@
     </head>
     <nav> {% block nav %}
         <ul>
-            <li><a href="{{ path('list_user') }}">Liste des utilisateurs<a> </li>
-            <li><a href="{{ path('list_product') }}">Liste des produits<a> </li>
-            
+            <li><a href="{{ path('list_user') }}">Liste des utilisateurs</a> </li>
+            <li><a href="{{ path('list_product') }}">Liste des produits</a> </li>
+            {% if is_granted('ROLE_USER') %} {#Verifie les perms de l'utilisateur#}
+            <li><a href="{{ path('my_product') }}">Mes produits</a> </li>
+            <li><a href="{{ path('add_product') }}">Ajouter un produit</a> </li>  
+            {% endif %}
         </ul>
         
         {% endblock %}</nav>
